kubernetes/kube-prod-d1/proxmox/prod-d1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxmox-service
  namespace: proxmox-prod-d1
spec:
  type: ExternalName
  externalName: pve-prod-d1.local-d1.mclacken.net
  ports:
    - name: http
      port: 8200
      targetPort: 8200
