kubernetes/kube-prod-d1/proxmox/prod-d1/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: proxmox-ingressroute
  namespace: proxmox-prod-d1
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`proxmox.pve-prod-d1.mclacken.net`) && PathPrefix(`/`)
      kind: Rule
      # middlewares:
      #   - name: authelia-forwardauth
      #     namespace: authelia-prod-d1
      services:
        - name: proxmox-service
          port: https
          serversTransport: proxmox-transport
  tls:
    secretName: all-applications-certificate-secret
